--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "debug": "^4.3.4",
+    "motionrack": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.3",
+    "remixicon": "^3.7.0",
     "uuid": "^9.0.1",
     "vercel": "^32.7.2"
   },
@@ -24,6 +28,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "react-router-dom": "^6.21.0",
     "vite": "^5.0.8"
   }
 }
